--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  text-align: left;
+  background-color: lightblue;
+  width: 300px;
+  margin: 30px;
+  padding: 10px;
+  border: 4px solid black;
+  border-radius: 10px;
+
 }
 
 .App-logo {
